<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.byos.yohann.fanfic.EditStoryActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_story_titre"
        android:hint="@string/new_story_titre"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_reference"
        android:layout_below="@+id/new_story_titre"
        android:hint="@string/reference"
        android:layout_alignParentStart="true"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/full_new_text"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:layout_marginTop="20dp"
        android:hint="@string/premiere_page"
        android:inputType="textMultiLine"
        android:layout_below="@+id/new_reference"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>

